Fixed header stuck to top of page

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1144,7 +1144,7 @@ input#searchInput::placeholder {
 
 
 .header-top {
-    top: 46px;
+    // top: 46px;
 }
 
 .strip,.strip a {
@@ -1186,7 +1186,7 @@ input#searchInput::placeholder {
 		display: none;
 	}
 	.header-top{
-		top: 36px;
+		// top: 36px;
 	}
 }
 @media only screen and (min-width: 280px) and (max-width: 280px) {
